redux 설정, 다이얼로그 스타일링

--- a/src/constants/_style.scss
+++ b/src/constants/_style.scss
@@ -1,13 +1,13 @@
-$ocGray3: '#dee2e6';
-$ocGray5: '#adb5bd';
-$ocGray7: '#495057';
-$ocGray9: '#212529';
-$ocRed8: '#e03131';
-$ocLime2: '#d8f5a2';
-$ocYellow2: '#ffec99';
-$ocOrange2: '#ffd8a8';
-$ocBlue3: '#74c0fc';
-$ocGrape3: '#e599f7';
-$ocCyan8: '#0c8599';
-$ocIndigo8: '#3b5bdb';
-$ocPink6: '#e64980';
+$ocGray3: #dee2e6;
+$ocGray5: #adb5bd;
+$ocGray7: #495057;
+$ocGray9: #212529;
+$ocRed8: #e03131;
+$ocLime2: #d8f5a2;
+$ocYellow2: #ffec99;
+$ocOrange2: #ffd8a8;
+$ocBlue3: #74c0fc;
+$ocGrape3: #e599f7;
+$ocCyan8: #0c8599;
+$ocIndigo8: #3b5bdb;
+$ocPink6: #e64980;
