--- a/src/App.scss
+++ b/src/App.scss
@@ -1,12 +1,59 @@
-//@import './constants/_style.scss';
-
-$ocYellow2: #ffec99;
+@import './constants/style';
 
 .PageBody {
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+
   display: flex;
   align-items: center;
   justify-content: center;
   height: 100vh;
 
-  background: $ocYellow2;
+  background: $ocGray3;
+
+  code {
+    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+      monospace;
+  }
+}
+.DialogBody {
+  width: 824px;
+  height: 485px;
+  padding: 84px;
+  background: white;
+  border-radius: 4px;
+
+  h3 {
+    margin: 0;
+    font-size: 1.5rem;
+  }
+
+  p {
+    font-size: 1.125rem;
+  }
+}
+.DimmedBackground {
+  position: fixed;
+  left: 0;
+  top: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  background: rgba(4, 4, 15, 0.8);
+}
+.HeadWrapper {
+  color: $ocGray9;
+  padding-bottom: 56px;
+  //border-bottom: 1px solid $ocGray5;
+
+  h1 {
+    margin: 0;
+    font-size: 2rem;
+  }
 }
